tools/vendor/datatest-stable/tests/compile-fail/missing-test-no-comma.rs
datatest_stable::harness! {
    { root = "tests/files", test = my_test, pattern = r"^.*(?<!\.skip)\.txt$" }
}
